--- a/front-end/task-mate/src/index.css
+++ b/front-end/task-mate/src/index.css
@@ -1,6 +1,12 @@
 html, body, #root {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   font-size: 15px;
+}
+body{
+  height: 100%;
+  overflow-y: scroll;
 }
