--- a/front-end/task-mate/src/App.css
+++ b/front-end/task-mate/src/App.css
@@ -1,14 +1,9 @@
 .form {
   height: 100%;
 }
-.sign-up {
-  width: 30%;
+
+.form-container {
 }
-.signup1,
-.signup2 {
-  width: 40%;
-}
-.form-container{}
 .mb-3 {
   height: 20%;
   margin-bottom: 10px;
@@ -46,51 +41,66 @@
   font-weight: 400;
   font-style: normal;
 }
+
+.sign-form {
+  padding: 3%;
+}
+
 .user-info,
 .user-sign {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
 }
-
-.sign-form {
-  padding: 2%;
+.sign-up,
+.signup1,
+.signup2 {
+  width: 100%;
+}
+.sign-form-label {
+  font-size: 1.1rem;
 }
 
 @media (min-width: 481px) {
   body {
     max-width: 768px;
   }
-  .form{
-    padding:0 8% 0 8%;
+  .form {
+    padding: 0 8% 0 8%;
   }
   .form-control {
     height: 45%;
     width: 100%;
+  }
+  .user-info,
+  .user-sign {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
   }
 }
 @media (min-width: 769px) {
   body {
     max-width: 1023px;
   }
-  .form{
-    padding:0 10% 0 10%;
+  .form {
+    padding: 0 10% 0 10%;
   }
-  .form-label{
-    
+  .form-label {
     font-size: 1.8rem;
   }
   .form-control {
     height: 40%;
     width: 100%;
   }
+  
 }
 
 @media (min-width: 1024px) {
   body {
     max-width: 1280px;
   }
-  .form-label{
-    
+  .form-label {
     font-size: 1.5rem;
   }
   .form-control {
@@ -103,11 +113,10 @@
   body {
     max-width: 1536px;
   }
-  .form{
-    padding:0 20% 0 20%;
+  .form {
+    padding: 0 20% 0 20%;
   }
-  .form-label{
-    
+  .form-label {
     font-size: 1.5rem;
   }
   .form-control {
@@ -120,8 +129,7 @@
   body {
     max-width: 3000px;
   }
-  .form-label{
-    
+  .form-label {
     font-size: 2.2rem;
   }
   .form-control {
@@ -129,7 +137,7 @@
     width: 100%;
     font-size: 1.8rem;
   }
-  .form-text{
+  .form-text {
     font-size: 1.8rem;
   }
 }
