--- a/front-end/task-mate/src/App.css
+++ b/front-end/task-mate/src/App.css
@@ -1,9 +1,6 @@
 .form {
   height: 100%;
 }
-
-.form-container {
-}
 .mb-3 {
   height: 20%;
   margin-bottom: 10px;
@@ -11,8 +8,8 @@
 .form-control {
   height: 45%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.5) !important;
-  border: 1px solid rgba(0, 0, 0, 0.25) !important;
+  background-color: rgba(0, 0, 0, 0.5) ;
+  border: 1px solid rgba(0, 0, 0, 0.25) ;
   color: #fff;
   border-radius: 8px;
   backdrop-filter: blur(8px);
@@ -60,6 +57,29 @@
 .sign-form-label {
   font-size: 1.1rem;
 }
+#title, .edit{
+  background-color:rgba(255, 255, 255, 0.2);
+  border:1px solid rgba(255, 255, 255, 0.3);
+  color: #e2e8f0;
+  font-size: 1.8rem;
+}
+.edit-label{
+  color: #fff;
+}
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+  cursor: pointer;
+}
+.edit-option-list, .edit-option{
+  color: black;
+}
+.edit-btn{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+}
+
 
 @media (min-width: 481px) {
   body {
@@ -77,6 +97,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+  }
+  .btn{
+    width: 30%;
+    height: 100%;
+    font-size: 1.3rem;
   }
 }
 @media (min-width: 769px) {
@@ -107,6 +132,9 @@
     height: 45%;
     width: 100%;
     font-size: 1.8rem;
+  }
+  .btn{
+    font-size: 1.5rem;
   }
 }
 @media (min-width: 1281px) {
@@ -139,5 +167,10 @@
   }
   .form-text {
     font-size: 1.8rem;
+  }
+  .btn{
+    width: 20%;
+    height: 100%;
+    font-size: 1.6rem;
   }
 }
